# lfp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  minimal_example.ipynb  minimal_example_spiking_nets.ipynb  pyproject.toml  requirements.txt  run_experiment.py  run_snn_experiment.py
.github/workflows/: main.yml
cluster_run/singularity/: image_mini.def  requirements_apptainer.txt
cluster_run/slurm/: download_repository.sh
cluster_run/slurm/activationfuncs/: run.sh  run_training.sh  running_apptainer.sh
cluster_run/slurm/cifar-basemodels/: run.sh  run_training_basemodel.sh  running_apptainer_basemodel.sh
cluster_run/slurm/cifar100-cifar10-transfer/: run.sh  run_training_basemodel.sh  running_apptainer_basemodel.sh
cluster_run/slurm/imagenet-transfer/: run.sh  run_training_transfermodel.sh  running_apptainer_transfermodel.sh
configs/activationfuncs/: config_generator_cifarbase_activations.py  config_generator_imagenettransfer_activations.py
configs/activationfuncs/cluster/: cifar100_cifar-vgglike_elu_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_elu_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_elu_0.1_lfp-epsilon_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_elu_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_elu_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_elu_0.1_vanilla-gradient_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_relu_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_relu_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_relu_0.1_lfp-epsilon_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_relu_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_relu_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_relu_0.1_vanilla-gradient_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_sigmoid_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_sigmoid_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_sigmoid_0.1_lfp-epsilon_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_sigmoid_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_sigmoid_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_sigmoid_0.1_vanilla-gradient_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_silu_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_silu_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_silu_0.1_lfp-epsilon_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_silu_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_silu_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_silu_0.1_vanilla-gradient_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_step_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_step_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_step_0.1_lfp-epsilon_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_step_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_step_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_step_0.1_vanilla-gradient_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_tanh_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5110_basemodel.yaml  cifar100_cifar-vgglike_tanh_0.1_lfp-epsilon_False_True_0.0_onecyclelr_5628_basemodel.yaml  cifar100_cifar-vgglike_tanh_0.1_lfp-epsilon_False_True_0.0_onecyclelr_7240_basemodel.yaml  cifar100_cifar-vgglike_tanh_0.1_vanilla-gradient_False_True_0.0_onecyclelr_5110_basemodel.yaml  (+254 more)
configs/cifar-basemodels/: config_generator_cifar_basemodels.py
configs/cifar100-cifar10-transfer/: config_generator_base_models.py
configs/imagenet-transfer/: config_generator_transfer_models_datasets.py
configs/spiking_neural_networks/: config_generator_mnist_training.py
experiment_utils/data/: custom_datasets.py  dataloaders.py  datasets.py  transforms.py
experiment_utils/evaluation/: evaluate.py
experiment_utils/model/: model_definitions.py  models.py
experiment_utils/training/: __init__.py  helper.py  lightning_models.py  metrics.py
experiment_utils/utils/: utils.py
lfp/data/: custom_datasets.py  dataloaders.py  datasets.py  transforms.py
lfp/evaluation/: evaluate.py
lfp/model/: custom_resnet.py  model_definitions.py  models.py
lfp/propagation/: __init__.py  make_canonizers.py  propagator_lxt.py  propagator_zennit.py
lfp/rewards/: reward_functions.py  rewards.py
lfp/utils/: utils.py
lfprop/model/: activations.py  custom_resnet.py  spiking_networks.py
lfprop/propagation/: make_canonizers.py  propagator_lxt.py  propagator_snn.py  propagator_zennit.py
lfprop/rewards/: __init__.py  reward_functions.py  rewards.py
nbs/: cifar10-cifar100-eval-clusterresults-pruning.ipynb  imagenet-transfer-eval-clusterresults-pruning.ipynb  investigate-simple-rewards-circles.ipynb  investigate-simple-rewards.ipynb  toyexperiment-silu-effects.ipynb  visualize-activations.ipynb  visualize-decision-boundaries-blobs-more-activations.ipynb  visualize-decision-boundaries-blobs.ipynb  visualize-decision-boundaries-circles-more-activations.ipynb  visualize-decision-boundaries-circles.ipynb  visualize-decision-boundaries-more-activations.ipynb  visualize-decision-boundaries-swirls-more-activations.ipynb  visualize-decision-boundaries-swirls.ipynb  visualize-decision-boundaries.ipynb  weightspace-toyexperiment-silu.ipynb  weightspace-toyexperiment.ipynb
(+168 files in other folders)
